:bug: overflow of result conteiner, now is hidden

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ main{
     padding-top: 10px;
 
     position: relative;
+    overflow: hidden;
 
     #input, #exp-prev{
         position: absolute;
